[package]
name = "codo"
version = "0.0.1"
edition = "2021"
authors = ["Chris Andrejewski <christopher.andrejewski@gmail.com>"]
description = "Code comment TODO tool"
readme = "README.md"
homepage = "https://github.com/andrejewski/codo"
repository = "https://github.com/andrejewski/codo"
keywords = ["cli", "todo", "issue", "linter", "formatter"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
grep = "0.2.12"
ignore = "0.4.20"
regex = "1.10.2"
serde_json = "1.0.108"
